Changelog
---------

    (name of developer listed in brackets)

plone.app.linkintegrity - 1.0.12 Unreleased


plone.app.linkintegrity - 1.0.11 Released November 15, 2008

    - Fix code to not silently swallow `ConflictErrors`.
      [witsch]

    - Fix issue with dangling references to already removed objects.
      Fixes http://dev.plone.org/plone/ticket/8349 and
      http://dev.plone.org/plone/ticket/8390.
      [witsch]

plone.app.linkintegrity - 1.0.10 Released July 7, 2008

    - Fixed the recognizing of links to files (or any object) with a
      space in the id.  Fixes #8167.
      [maurits]

    - Updated tests to work with LinguaPlone by unmarking the creation
      flag on new objects.
      [maurits]

plone.app.linkintegrity - 1.0.9 Released May 8, 2008

    - Use acquisition API to support the "philikon-aq" branch.
      [witsch]

    - Fix a problem with updating link integrity references during a
      request which trying to delete multiple other objects.
      [witsch]

plone.app.linkintegrity - 1.0.8 Released April 21, 2008

    - Added missing i18n markup to `confirmation.pt`, also fixing
      http://dev.plone.org/plone/ticket/7995.
      [witsch]

plone.app.linkintegrity - 1.0.7 Released March 27, 2008

    - Fixed accidental removal of references not related to link integrity.
      [dunny]

plone.app.linkintegrity - 1.0.6 Released March 8, 2008

    - Added missing namespace declaration to avoid the warning about it.
      [wiggy]

plone.app.linkintegrity - 1.0.5 Released February 13, 2008

    - Added missing i18n markup to confirmation.pt. This closes
      http://dev.plone.org/plone/ticket/7688.
      [hannosch]

plone.app.linkintegrity - 1.0.4 Released January 3, 2008

    - Handle `IObjectRemovedEvents` with no attached request object.
      [witsch]

    - Updated tests to work with Plone 4.0.
      [hannosch]

    - Referencing items are now listed in alphabetical order
      [witsch]
